--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,9 +10,9 @@
                 <hr />
                 <h3>Answer a few basic questions</h3>
                 <h3>Then meet a new friend!</h3>
-                <a href="survey.html" class="btn btn-info btn-lg">Go To Survey!</a>
+                <a href="survey" class="btn btn-info btn-lg">Go To Survey!</a>
             </div>
-            <p><a href="#">API Friends List</a> | <a href="https://github.com/ajandorek/friend-finder">GitHub Repo</a></p>
+            <p><a href="api/friends">API Friends List</a> | <a href="https://github.com/ajandorek/friend-finder">GitHub Repo</a></p>
         </div>
     </body>
 </html>
