--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -170,13 +170,20 @@
         </div>
     </body>
     <script type="text/javascript">
+        //When our submit button is clicked...  
         $("#findFriend").on("click", function(event){
+            //We get the friends api
             $.get("/api/friends").done(function(data){
+                //setting a variable of our api
                 var friends = data;
                 event.preventDefault();
+                //creating an empty array for our match rank
                 var matchRank = [];
+                //looping through our friend array
                 for (var i = 0; i < data.length; i++){
+                    //setting a temporary empty arry for scores
                     var scores = [];
+                    //subtracting our input values from that of each friend in the array and inputing them into our temporary array
                     var  q1 = ($("#q1").val() - friends[i].scores[0]);
                     scores.push(Math.abs(q1));
                     var  q2 = ($("#q2").val() - friends[i].scores[1]);
@@ -198,26 +205,32 @@
                     var  q10 = ($("#q10").val() - friends[i].scores[9]);
                     scores.push(Math.abs(q10));
                     console.log(scores);
+                    //adding all of our scores together from the array
                     var sum = scores.reduce((a, b) => a + b, 0);
+                    //pushing that number into our match array
                     matchRank.push(sum);
                 }
+                //taking the lowest score from out match rank array
                 var lowScore = Math.min.apply(Math, matchRank);
+                //finding the index of the lowest score
                 var bestie = matchRank.indexOf(lowScore);
                 console.log(`congrats your new friend is ${friends[bestie].name} :)`);
+                //logging the best matched friend to the screen
                 $("#friendName").html(`<h1>Name: ${friends[bestie].name}</h1>`);
                 $("#friendImg").html(`<img class="img" src="${friends[bestie].photo}" alt="a picture of ${friends[bestie].name}" />`);
+                //reloading the page when the modal is closed
                 $("#closeMe").on("click", function(){
                     location.reload();
                 });
             });
-                
+                //adding the user input to the friend array
                 var newFriend = {
                     name: $("#name").val().trim(),
                     photo: $("#photo").val().trim(),
                     scores: [$("#q1").val(), $("#q2").val(), $("#q3").val(), $("#q4").val(), $("#q5").val(), $("#q6").val(), $("#q7").val(), $("#q8").val(), $("#q9").val(), $("#q10").val()]
                 };
                 console.log(newFriend);
-
+                //posting our new friend to the api
                 $.post("/api/friends", newFriend, function(data){
                     console.log("New Friend Added :)");
                 });
